Stopped image shifting on mobile lightbox

--- a/src/stylus/_mediaQueries/tablet.styl
+++ b/src/stylus/_mediaQueries/tablet.styl
@@ -24,7 +24,7 @@ html
 
       &:hover
         opacity 1 !important
-        transform scale(1) translateY(-47.5%) translateX(-47.5%)
+        transform scale(1) translateY(-50%) translateX(-50%)
         cursor pointer
 .Modal
 
